<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">
        <TextView
            android:id="@+id/planDayTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="25sp"
            android:layout_weight="1"
            android:text="@string/plan_dzienny" />
        <TextView
            android:id="@+id/currentWorksTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="25sp"
            android:layout_weight="1"
            android:text="@string/trwaj_ce_plany"/>
        <TextView
            android:id="@+id/completedWorksTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="25sp"
            android:layout_weight="1"
            android:text="@string/zako_czone_plany"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">
        <EditText
            android:id="@+id/calendarEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/dd_mm_rrrr"
            android:textSize="25sp"
            android:layout_weight="1"
            tools:ignore="InefficientWeight,TextFields"
            android:autofillHints="" />
    </LinearLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </androidx.viewpager2.widget.ViewPager2>
</LinearLayout>